Extended to allow generation of JAR file and installation in local repository

--- a/ficl.properties
+++ b/ficl.properties
@@ -1,3 +1,6 @@
-path.variable.maven_repository=/Users/paul/.m2/repository
-path.variable.user_home_griffon=/tmp/griffon
-jdk.home.1.6=/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Home
+# FICL Ant Properties which are used to build the jar and locally install it in your maven repository.
+ficl.jar=ficl
+ficl.groupId=askowl.com
+ficl.artifactId=ficl
+ficl.version=1.0.0
+
