correct package name

--- a/ficl.properties
+++ b/ficl.properties
@@ -1,6 +1,6 @@
 # FICL Ant Properties which are used to build the jar and locally install it in your maven repository.
 ficl.jar=ficl
-ficl.groupId=askowl.com
+ficl.groupId=com.askowl
 ficl.artifactId=ficl
 ficl.version=1.0.0
 
